# bb

./: Cargo.toml  fspam.py  main.rs  noban.txt
.github/workflows/: f.yml  fspam.yml
src/: main.rs
