[package]
name = "fast_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
twilight-gateway = "0.15"
twilight-model = "0.15"
twilight-http = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
md5 = "0.7"
base64 = "0.21"
aes = "0.8"
cipher = "0.4"
anyhow = "1.0"
