[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[package]
name = "fast_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
twilight-gateway = "0.17"
twilight-model = "0.17"
twilight-http = "0.17"
futures = "0.3"
reqwest = { version = "0.13", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
md5 = "0.8"
base64 = "0.22"
aes = "0.8"
cipher = "0.4"
anyhow = "1.0"
